--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
     <body>
      Welcome to the Potato
+        
+        <iframe name="fmeeframe" style="width: 600px; height: 400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+src="//followmee.com/maps.aspx?key=8231460edfbf5271c7ef9c6aeb3a32cb&username=robotato.live&type=2&deviceid=12424706&function=historyfordevice&history=168&z=8"></iframe>
     </body>
 </html>
