--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body style="margin:0px;">
      Welcome to the Potato
         
         <iframe name="fmeeframe" style="width: 100%; height: 600px;" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
