--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
   
 <html>
+  <head><title>Robotato.LIVE</title></head>
     <body style="margin:0px;font-family:Arial;">
 <div style="width:100%;text-align:center;">
 <div style="border-radius:0px 0px 20px 20px;margin:auto;max-width:1024px;background-image:url('https://i.imgur.com/MQzXgko.jpg');background-position:center;height:60%;background-repeat: no-repeat;background-size: cover;"><br />&nbsp;</div>
