--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ I'll be hosting a 24/7 live feed where you can follow along every step of the wa
 <p style="max-width:700px;margin:auto;padding-top:20px;">Here is my current 2021 resolution list:</p>
 
 <pre>1-Pass the Naturalization test and become an American Citizen
-2-Actively date / try to find my next wife
+2-Actively date / try to find my soulmate
 3-Get my first Pet
 4-NoFap Hard Mode (all year)
 5-Meditate 1x per day
