--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ I'll be hosting a 24/7 live feed where you can follow along every step of the wa
 
 <p style="max-width:700px;margin:auto;padding-top:20px;">To support me and this project, you can <a href="https://www.patreon.com/robotato_live" target="_blank">become a Patron</a>. You may also <a href="https://www.amazon.com/hz/wishlist/ls/2PTK42DMWUKK" target="_blank">help me acquire the equipment I need for this project</a>.</p>
 
-<p style="max-width:700px;margin:auto;padding-top:20px;">Thanks, and Happy Holidays!<br />-Eric</p>
+<p style="max-width:700px;margin:auto;padding-top:20px;">Thanks and Happy Holidays!<br />-Eric</p>
 
 
-<p style="max-width:700px;margin:auto;padding-top:20px;"><a href="https://twitter.com/RobotatoLIVE" />https://twitter.com/RobotatoLIVE</a><br /><a href="https://www.twitch.tv/robotatolive" target="_blank">https://www.twitch.tv/robotatolive</a></p>
+<p style="max-width:700px;margin:auto;padding-top:20px;"><a href="https://twitter.com/RobotatoLIVE" />twitter.com/RobotatoLIVE</a><br /><a href="https://www.twitch.tv/robotatolive" target="_blank">twitch.tv/robotatolive</a></p>
 </div>
 
 
