--- a/index.html
+++ b/index.html
@@ -1,49 +1,88 @@
-  
 <html>
-  <head>
-    <title>Robotato.LIVE</title>
-    <style type="text/css">
-    p {
-      max-width:700px;
-      margin:auto;
-      padding-top:20px;
-    }
-    </style>
-  </head>
-    <body style="margin:0px;font-family:Arial;">
-<div style="width:100%;text-align:center;">
-<div style="border-radius:0px 0px 20px 20px;margin:auto;max-width:1024px;background-image:url('https://i.imgur.com/MQzXgko.jpg');background-position:center;height:60%;background-repeat: no-repeat;background-size: cover;"><br />&nbsp;</div>
-     <h1 style="font-size:4em;padding-bottom:0px;margin-bottom:10px;">Robotato<span style="color:red;">.LIVE</span></h1>
-<p style="max-width:700px;margin:auto;">I'm leaving behind a great job, wife and house. My main goal in 2021 is to launch a successful video channel on Usability.
+   <head>
+      <title>Robotato.LIVE</title>
 
-I'll be hosting a 24/7 live feed where you can follow along every step of the way! I will also be attempting some pretty bold new year's resolutions and attempt to find love in a brand new state. Will I succeed or fail?</p>
+      <style type="text/css">
+         body {
+         line-height:120%;
+         }
+         p {
+         max-width:700px;
+         margin:auto;
+         padding-top:20px;
+         }
+         pre {
+         width:550px;
+         margin:auto;
+         text-align:left;
+         border:1px solid black;
+         padding:10px;
+         margin-top:10px;
+         }
+         a {
+         text-decoration:none;
+         }
+     </style>
 
-<p>Soon I will be travelling 2,000 miles to my new residence which will be home for this experiment. I'm moving from Southern California to Tennessee and am really excited to meet the locals! The whole trip will be livestreamed (where 4G is available) using the accounts listed below.</p>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JXZLT06T06"></script>
+     <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-JXZLT06T06');
+      </script>
 
-<p>Here is my current 2021 resolution list:</p>
-
-<pre>1-Pass the Naturalization test and become an American Citizen
+   </head>
+   <body style="margin:0px;font-family:Arial;">
+      <div style="width:100%;text-align:center;">
+         <div style="border-radius:0px 0px 20px 20px;margin:auto;max-width:1024px;background-image:url('https://i.imgur.com/MQzXgko.jpg');background-position:center;height:60%;background-repeat: no-repeat;background-size: cover;">
+            <br />&nbsp;
+         </div>
+         <h1 style="font-size:4em;padding-bottom:0px;margin-bottom:10px;">Robotato
+            <span style="color:red;">.LIVE</span>
+         </h1>
+         <p style="max-width:700px;margin:auto;">I'm leaving behind a great job, wife and house. My main goal in 2021 is to launch a successful video channel on Usability.
+            I'll be hosting a 24/7 live feed where you can follow along every step of the way! I will also be attempting some pretty bold new year's resolutions and attempt to find love in a brand new state. Will I succeed or fail?
+         </p>
+         <p>Soon I will be travelling 2,000 miles to my new residence which will be home for this experiment. I'm moving from Southern California to Tennessee and am really excited to meet the locals! The whole trip will be livestreamed (where 4G is available) using the accounts listed below.</p>
+         <p>Here is my current 2021 resolution list:</p>
+         <pre>1-Pass the Naturalization test and become an American Citizen
 2-Actively date / try to find my soulmate
 3-Get my first Pet
 4-NoFap Hard Mode (all year)
 5-Meditate 1x per day
 6-Work Out 3x per week
 </pre>
-
-<p>A quick disclaimer on comments: I will mostly not be paying attention to the comments (i.e. on YouTube, Twitch, etc.) and be talking to myself instead, with you in mind of course. It is mainly to protect my own mental health (I will be talking about Mental Health extensively in upcoming videos). There will be ways to reach me set in place but it will be extremely limited -- by design.</p>
-
-<p>To support me and this project, you can <a href="https://www.patreon.com/robotato_live" target="_blank">become a Patron</a>. You may also <a href="https://www.amazon.com/hz/wishlist/ls/2PTK42DMWUKK" target="_blank">help me acquire the equipment I need for this project</a>.</p>
-
-<p>Thanks and Happy Holidays!<br />-Eric</p>
-
-
-<p><a href="https://twitter.com/RobotatoLIVE" />twitter.com/RobotatoLIVE</a><br /><a href="https://www.twitch.tv/robotatolive" target="_blank">twitch.tv/robotatolive</a></p>
-</div>
-
-
-<h1 style="padding-left:20px;">Live approximate location:</h1>
-        <iframe name="fmeeframe" style="padding-top:0px;width: 100%; height: 80%;" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
-src="//followmee.com/maps.aspx?key=8231460edfbf5271c7ef9c6aeb3a32cb&username=robotato.live&type=2&deviceid=12424706&function=currentfordevice&z=8&file=1/robotato_live/road_trip_2020__2_.kml"></iframe>
-
-    </body>
+         <p></p>
+         <div id="magicbox"></div>
+         <p>A quick disclaimer on comments: I will mostly not be paying attention to the comments (i.e. on YouTube, Twitch, etc.) and be talking to myself instead (with you in mind of course)! It is to protect my own mental health (I will be talking about Mental Health extensively in upcoming videos). There will be ways to reach me set in place but it will be extremely limited -- by design.</p>
+         <p>To support me and this project, you can 
+            <a href="https://www.patreon.com/robotato_live" target="_blank">become a Patron</a>. You may also 
+            <a href="https://www.amazon.com/hz/wishlist/ls/2PTK42DMWUKK" target="_blank">help me acquire the equipment I need for this project</a>.
+         </p>
+         <p>Thanks and Happy Holidays!
+            <br />-Eric
+         </p>
+         <p>
+            <a href="https://twitter.com/Robotato_LIVE">TWITTER</a>&nbsp;|&nbsp;
+            <a href="https://www.twitch.tv/robotato_live" target="_blank">TWITCH</a>&nbsp;|&nbsp;
+            <a href="https://www.youtube.com/channel/UCub3H_YNVPbRtq0kVo6w7rQ" target="_blank">YOUTUBE</a>&nbsp;|&nbsp;
+            <a href="https://patreon.com/robotato_live" target="_blank">PATREON</a>
+         </p>
+      </div>
+      <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
+      <script type="text/javascript">
+         var options = {
+           width: "100%",
+           height: "50%",
+           channel: "robotato_live"
+         };
+         var player = new Twitch.Player("magicbox", options);
+         player.setVolume(0);
+      </script>
+      <h1 style="padding-left:20px;">Live approximate location:</h1>
+      <iframe name="fmeeframe" style="padding-top:0px;width: 100%; height: 80%;" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+         src="//followmee.com/maps.aspx?key=8231460edfbf5271c7ef9c6aeb3a32cb&username=robotato.live&type=2&deviceid=12424706&function=currentfordevice&z=8&file=1/robotato_live/road_trip_2020__2_.kml"></iframe>
+   </body>
 </html>
