--- a/index.html
+++ b/index.html
@@ -104,6 +104,6 @@
     </script>
     <h1 style="padding-left:20px;">Live approximate location:</h1>
     <iframe name="fmeeframe" style="padding-top:0px;width: 100%; height: 80%;" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
-      src="//followmee.com/maps.aspx?key=8231460edfbf5271c7ef9c6aeb3a32cb&username=robotato.live&type=2&deviceid=12424706&function=currentfordevice&z=8&file=1/robotato_live/road_trip_2020__2_.kml"></iframe>
+      src="//followmee.com/maps.aspx?key=8231460edfbf5271c7ef9c6aeb3a32cb&username=robotato.live&type=2&deviceid=12424706&function=currentfordevice&z=8&rt=1&file=1/robotato_live/road_trip_2020__2_.kml"></iframe>
   </body>
 </html>
