--- a/index.html
+++ b/index.html
@@ -78,19 +78,6 @@
       <p>&nbsp;</p>
       <div id="magicbox"></div>
       <p>A quick disclaimer on comments: I will mostly not be paying attention to the comments (i.e. on YouTube, Twitch, etc.) and be talking to myself instead (with you in mind of course)! It is to protect my own mental health (I will be talking about Mental Health extensively in upcoming videos). There will be ways to reach me set in place but it will be extremely limited -- by design.</p>
-      <p>To support me and this project, you can 
-        <a href="https://www.patreon.com/robotato_live" target="_blank">become a Patron</a>. You may also 
-        <a href="https://www.amazon.com/hz/wishlist/ls/2PTK42DMWUKK" target="_blank">help me acquire the equipment I need for this project</a>.
-      </p>
-      <p>Thanks and Happy Holidays!
-        <br />-Eric
-      </p>
-      <p>
-        <a href="https://twitter.com/Robotato_LIVE">TWITTER</a>&nbsp;|&nbsp;
-        <a href="https://www.twitch.tv/robotato_live" target="_blank">TWITCH</a>&nbsp;|&nbsp;
-        <a href="https://www.youtube.com/channel/UCub3H_YNVPbRtq0kVo6w7rQ" target="_blank">YOUTUBE</a>&nbsp;|&nbsp;
-        <a href="https://patreon.com/robotato_live" target="_blank">PATREON</a>
-      </p>
     </div>
     <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
     <script type="text/javascript">
@@ -105,5 +92,19 @@
     <h1 style="padding-left:20px;">Live approximate location:</h1>
     <iframe name="fmeeframe" style="padding-top:0px;width: 100%; height: 80%;" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
       src="//followmee.com/maps.aspx?key=8231460edfbf5271c7ef9c6aeb3a32cb&username=robotato.live&type=2&deviceid=12424706&function=currentfordevice&z=8&rt=1&file=1/robotato_live/road_trip_2020__2_.kml"></iframe>
+    <p>&nbsp;</p>
+    <p>To support me and this project, you can 
+        <a href="https://www.patreon.com/robotato_live" target="_blank">become a Patron</a>. You may also 
+        <a href="https://www.amazon.com/hz/wishlist/ls/2PTK42DMWUKK" target="_blank">help me acquire the equipment I need for this project</a>.
+      </p>
+      <p>Thanks and Happy Holidays!
+        <br />-Eric
+      </p>
+      <p>
+        <a href="https://twitter.com/Robotato_LIVE">TWITTER</a>&nbsp;|&nbsp;
+        <a href="https://www.twitch.tv/robotato_live" target="_blank">TWITCH</a>&nbsp;|&nbsp;
+        <a href="https://www.youtube.com/channel/UCub3H_YNVPbRtq0kVo6w7rQ" target="_blank">YOUTUBE</a>&nbsp;|&nbsp;
+        <a href="https://patreon.com/robotato_live" target="_blank">PATREON</a>
+      </p>
   </body>
 </html>
