--- a/index.html
+++ b/index.html
@@ -106,5 +106,6 @@
         <a href="https://www.youtube.com/channel/UCub3H_YNVPbRtq0kVo6w7rQ" target="_blank">YOUTUBE</a>&nbsp;|&nbsp;
         <a href="https://patreon.com/robotato_live" target="_blank">PATREON</a>
       </p>
+    <p>&nbsp;</p>
   </body>
 </html>
