--- a/sites/wholetthechecksout.com/index.html
+++ b/sites/wholetthechecksout.com/index.html
@@ -1,22 +1,24 @@
 <html>
 <body>
 <strong>Not</strong> our current President
-<br />
+<br /><br />
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Biden_oath_of_office.jpg/597px-Biden_oath_of_office.jpg" />
-
-In Office since*:
+<br /><br /><br />
+In Office since*:<br />
 January 20, 2021
-
+<br /><br />
 LetSmart:
 <iframe width="70%" height="70%" src="https://www.youtube-nocookie.com/embed/e1aqAcFUJ6Y?start=10" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br />
 Direct Democracy
-
-LetFun:
+<br /><br />
+LetFun:<br />
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Qkuu0Lwb5EM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<br />
 *: https://en.wikipedia.org/w/index.php?title=Inauguration_of_Joe_Biden&oldid=1005161504
-
+  <br />
+My Bible: https://twitter.com/skrug
+<br />
 Signature:
 fefefewpinfewfsdadsa
 </body>
