--- a/sites/wholetthechecksout.com/index.html
+++ b/sites/wholetthechecksout.com/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-  <h1><Who let the Checks out?</h1>
+  <h1>Who let the Checks out?</h1>
+  <p>
 <strong>Not</strong> our current President
 <br /><br />
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Biden_oath_of_office.jpg/597px-Biden_oath_of_office.jpg" />
