--- a/sites/wholetthechecksout.com/index.html
+++ b/sites/wholetthechecksout.com/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <h1>Who let the Checks out?</h1>
+  <h1>Who let the <span ="color:blue;">Checks</span> out?</h1>
   <p>
 <strong>Not</strong> our current President
 <br /><br />
