--- a/index.html
+++ b/index.html
@@ -64,18 +64,9 @@
     <div id="container">
       <div id="hero">&nbsp;</div>
       <h1 id="hero_title">Robotato<span id="live">.LIVE</span></h1>
-      <p>I'm leaving behind a great job, wife and house. My main goal in 2021 is to launch a successful video channel on Usability. I'll be hosting a 24/7 live feed where you can follow along every step of the way! I will also be attempting some pretty bold new year's resolutions and attempt to find love in a brand new state. Will I succeed or fail?</p>
-      <p>Soon I will be travelling 2,000 miles to my new residence which will be home for this experiment. I'm moving from Southern California to Tennessee and am really excited to meet the locals! The whole trip will be livestreamed (where 4G is available) using the accounts listed below.</p>
-      <p>Here is my current 2021 resolution list:</p>
-<pre>
-1-Pass the Naturalization test and become an American Citizen
-2-Actively date / try to find my soulmate
-3-Get my first Pet
-4-NoFap Hard Mode (all year)
-5-Meditate 1x per day
-6-Work Out 3x per week
-</pre>
-      <p>&nbsp;</p>
+      <p>The Robotato.LIVE experiment has been put on indefinite hold due to personal events.</p>
+      <p>In the meantime, please help me by participating to this short Survey:</p>
+      <p><a href="https://forms.gle/v5an5UDe6PyJJwp28>Robotato explains themselves (and what happened)</a></p>
       <div id="magicbox"></div>
       <p>A quick disclaimer on comments: I will mostly not be paying attention to the comments (i.e. on YouTube, Twitch, etc.) and be talking to myself instead (with you in mind of course)! It is to protect my own mental health (I will be talking about Mental Health extensively in upcoming videos). There will be ways to reach me set in place but it will be extremely limited -- by design.</p>
     </div>
@@ -90,18 +81,10 @@
       player.setVolume(0);
     </script>
     <p>&nbsp;</p>
-    <p>To support me and this project, you can 
-        <a href="https://www.patreon.com/robotato_live" target="_blank">become a Patron</a>. You may also 
-        <a href="https://www.amazon.com/hz/wishlist/ls/2PTK42DMWUKK" target="_blank">help me acquire the equipment I need for this project</a>.
-      </p>
-      <p>Thanks and Happy Holidays!
-        <br />-Eric
-      </p>
       <p>
         <a href="https://twitter.com/Robotato_LIVE">TWITTER</a>&nbsp;|&nbsp;
         <a href="https://www.twitch.tv/robotato_live" target="_blank">TWITCH</a>&nbsp;|&nbsp;
-        <a href="https://www.youtube.com/channel/UCub3H_YNVPbRtq0kVo6w7rQ" target="_blank">YOUTUBE</a>&nbsp;|&nbsp;
-        <a href="https://patreon.com/robotato_live" target="_blank">PATREON</a>
+        <a href="https://www.youtube.com/channel/UCub3H_YNVPbRtq0kVo6w7rQ" target="_blank">YOUTUBE</a>
       </p>
     <p>&nbsp;</p>
   </body>
