--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       <p>The Robotato.LIVE experiment has been put on indefinite hold due to personal events.</p>
       <p>In the meantime, please help me by participating to this short Survey:</p>
       <p><a href="https://forms.gle/v5an5UDe6PyJJwp28">Robotato explains themselves (and what happened)</a></p>
+      <p>&nbsp;</p>
       <div id="magicbox"></div>
       <p>A quick disclaimer on comments: I will mostly not be paying attention to the comments (i.e. on YouTube, Twitch, etc.) and be talking to myself instead (with you in mind of course)! It is to protect my own mental health (I will be talking about Mental Health extensively in upcoming videos). There will be ways to reach me set in place but it will be extremely limited -- by design.</p>
     </div>
