--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
   <body>
     <div id="container">
       <div id="hero">&nbsp;</div>
-      <p>&nbsp;</p>
       <h1 id="hero_title">Robotato<span id="live">.LIVE</span></h1>
+      <p>&nbsp;</p>
       <p>The Robotato.LIVE experiment has been put on indefinite hold due to personal events. 
-      In the meantime, please help me by participatingy:</p>
+      In the meantime, please help me by participating:</p>
       <h2><a href="https://forms.gle/v5an5UDe6PyJJwp28">Survey: Robotato explains themselves (and what happened)</a></h2>
       <p>&nbsp;</p>
       <div id="magicbox"></div>
@@ -82,7 +82,6 @@
       var player = new Twitch.Player("magicbox", options);
       player.setVolume(0);
     </script>
-    <p>&nbsp;</p>
       <p>
         <a href="https://twitter.com/Robotato_LIVE">TWITTER</a>&nbsp;|&nbsp;
         <a href="https://www.twitch.tv/robotato_live" target="_blank">TWITCH</a>&nbsp;|&nbsp;
