--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
       player.setVolume(0);
     </script>
       <p>
-        <a href="https://twitter.com/Robotato_LIVE">TWITTER</a>&nbsp;|&nbsp;
-        <a href="https://www.twitch.tv/robotato_live" target="_blank">TWITCH</a>&nbsp;|&nbsp;
-        <a href="https://www.youtube.com/channel/UCub3H_YNVPbRtq0kVo6w7rQ" target="_blank">YOUTUBE</a>
+        <a href="https://twitter.com/Robotato_LIVE">Twitter</a>&nbsp;|&nbsp;
+        <a href="https://www.twitch.tv/robotato_live" target="_blank">Twitch</a>&nbsp;|&nbsp;
+        <a href="https://www.youtube.com/channel/UCub3H_YNVPbRtq0kVo6w7rQ" target="_blank">YouTube</a>
       </p>
     <p>&nbsp;</p>
   </body>
