--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div id="container">
       <div id="hero">&nbsp;</div>
       <h1 id="hero_title">Robotato<span id="live">.LIVE</span></h1>
-      <p>The Robotato.LIVE experiment has been put on indefinite hold due to personal events. 
+      <p>The <a href="https://robotato.medium.com/what-was-the-robotato-live-experiment-d979cd38d333">Robotato.LIVE experiment</a> has been put on indefinite hold due to personal events. 
       In the meantime, please help me by participating:</p>
       <h2><a href="https://forms.gle/v5an5UDe6PyJJwp28">Survey: Robotato explains themselves (and what happened)</a></h2>
       <p>&nbsp;</p>
